@@ -2,6 +2,9 @@
  * $Id$
  */
 
+2011-05-26 16:27 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  +  wxHarbour.hbc
+
 2011-05-26 16:23 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   +  wxHarbour.hbc
 
